# OGFN-Launcher

./: README.md  bun.lockb  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.ico.broken  png-to-ico.js
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/music/[file]/: route.ts
src/app/home/: page.tsx
src/app/leaderboard/: page.tsx
src/app/register/: page.tsx
src/app/settings/: page.tsx
src/app/shop/: page.tsx
src/app/splash/oauth/discord/callback/: page.tsx
src/components/auth/: flow-particles.tsx
src/components/layout/: Sidebar.tsx  WindowBar.tsx
src/components/providers/: ConnectionMonitor.tsx  MusicProvider.tsx  RpcProvider.tsx
src/components/ui/: dialog.tsx  progress.tsx
src/lib/: config.ts
src/lib/api/: client.ts  discord-oauth.ts  endpoints.ts  splash-endpoints.ts  tauri-config.ts  verify-session.ts
src/lib/hooks/: use-auth-init.ts  use-discord-rpc.ts
src/lib/stores/: auth.ts  builds.ts  music.ts  session.ts
src/lib/types/: auth.ts  index.ts
~/.tauri/: solaris.key  solaris.key.pub
